CPG-DEV/src/objects/CustomerMeetingReport__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>Competitor, Ship To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Meeting Reports</relationshipLabel>
        <relationshipName>Customer_Meeting_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <description>This comes under Meeting Detail section</description>
        <label>Agenda</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cargill Business Detail relationship.</description>
        <inlineHelpText>Cargill Business Detail relationship.</inlineHelpText>
        <label>Business</label>
        <referenceTo>BusinessDetail__c</referenceTo>
        <relationshipLabel>Customer Meeting Reports</relationshipLabel>
        <relationshipName>Customer_Meeting_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))+  Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeetingDate1__c</fullName>
        <description>This is created for task 154, as we cannot use date field in field update of name</description>
        <formula>TEXT(MeetingDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MeetingDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeetingDate__c</fullName>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <description>This comes under Meeting Detail Section</description>
        <label>Objectives</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OtherAttendees__c</fullName>
        <label>Other Attendees</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrimaryAttendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Meeting Reports</relationshipLabel>
        <relationshipName>Customer_Meeting_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Customer Meeting Reports</relationshipLabel>
        <relationshipName>Customer_Meeting_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordNumber__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>This comes under Meeting Detail section</description>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Customer Meeting Report</label>
    <nameField>
        <label>Customer Meeting Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Meeting Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Customer_Meeting_Date_Blank_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR(ISPICKVAL(Status__c, &quot;Closed&quot;), 
ISPICKVAL(Status__c, &quot;Complete&quot;) 
), 
ISNULL(MeetingDate__c) 
)</errorConditionFormula>
        <errorMessage>Meeting Date is required to advance Status to &quot;Complete&quot; or &quot;Closed&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RestrictCustomerMeetingReportNameUpdate</fullName>
        <active>true</active>
        <description>Customer Meeting Report Name cannot be updated. It can be editable only at the time of creation.</description>
        <errorConditionFormula>AND( 
NOT(ISNEW()), 
ISCHANGED(Name), 
$Profile.Name &lt;&gt; &apos;System Administrator&apos; 
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Customer Meeting Report Name cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>